--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,9 @@ jobs:
             git stash
             git pull || { echo "❌ Git pull failed"; exit 1; }
 
-
+            echo "🧰 Ensuring python3-venv is available..."
+            apt update -y && apt install -y python3-venv
+            
             echo "🐍 Setting up virtual environment..."
             python3 -m venv .venv
             source .venv/bin/activate
