--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -328,8 +328,9 @@ nav:
       - Crux Finance: eco/crux.md
       # - Azorus: eco/azorus.md
       - ErgoNames: eco/ergonames.md
-      - Celaut: eco/celaut.md
-        #- Reputation System: eco/reputation-system.md
+      - Celaut: 
+        - eco/celaut.md
+        - Reputation System: eco/reputation-system.md
       - Netnotes: eco/netnotes.md
       - SigmaRand: eco/sigmarand.md
       - Moria Finance: eco/moria-finance.md
