--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -628,7 +628,10 @@ nav:
             - Cold Wallet: dev/wallet/standards/eip19.md
             - EIP Standards Overview: dev/wallet/eip-standards.md
             - EIP-0005: dev/wallet/standards/eip5.md
-      - Integration Guide: dev/Integration/guide.md
+      - Integration Guide: 
+        - dev/integration/guide.md
+        - Transaction Lifecycle: dev/integration/transaction-lifecycle.md
+        - Dust Collection: dev/integration/dust-collection.md
 
     - Tooling:
       - Pathways:
